--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
 /* 🌼 Palet Warna Tema Madu */
 :root {
   --color-honey-light: #f3e5b7;
-  --color-honey: #fbbf24;
+  --color-honey: #fce2a0;
   --color-honey-dark: #b45309;
-  --color-honey-deep: #78350f;
+  --color-honey-deep: #a34916;
   --color-cream: #fef3c7;
 }
 html {
